MDEV-8614 Assertion `status == 0' failed in add_role_user_mapping_action on RENAME USER

don't forget to re-examine the current element when updating a HASH